--- a/Diplo_VFX55/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Diplo_VFX55/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,8 +290,9 @@ ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
 LastLevel=/Game/Untitled
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=Niagara
 RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=Niagara
@@ -329,8 +330,8 @@ ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.JumpMRU=/All/Game/Diplo/VFX_Niagaras/VFX_1
 ContentBrowserTab1.JumpMRU=/All/Game/Diplo/VFX_Niagaras
 ContentBrowserTab1.JumpMRU=/All/Game/Diplo
-ContentBrowserTab1.JumpMRU=/All/Game/Diplo/VFX_Niagaras/VFX_1/Materials
 ContentBrowserTab1.JumpMRU=/All/Game
+ContentBrowserTab1.JumpMRU=/All/Game/Diplo/VFX_Niagaras/VFX_1/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/HDRI
@@ -579,6 +580,7 @@ MRUItem10=/Game/Diplo/VFX_Niagaras/VFX_1/NS_SpritesEjemplo
 /Game/Diplo/VFX_Niagaras/VFX_1/NS_Cosa.NS_Cosa=1
 /Game/Diplo/VFX_Niagaras/VFX_1/M_Espiral.M_Espiral=1
 /Game/Diplo/VFX_Niagaras/VFX_1/NS_Pruebas.NS_Pruebas=1
+/Game/Diplo/VFX_Niagaras/VFX_1/NS_Fontana.NS_Fontana=1
 
 [MaterialEditor]
 PrimType=0
@@ -746,12 +748,12 @@ bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
 
 [RootWindow]
-ScreenPosition=X=19.200 Y=19.200
-WindowSize=X=1915.200 Y=1023.200
-InitiallyMaximized=False
+ScreenPosition=X=19.000 Y=19.000
+WindowSize=X=1916.000 Y=1024.000
+InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/cmhl6/Documents/GitHub/Learning_UE5/Diplo_VFX55/Content
+UNR=../../../../../../Users/cmhl6/Documents/GitHub/Learning_UE5/Diplo_VFX55/Content/Diplo
 BRUSH=D:/UE5/Diplo_VFX55/Content/
 FBX=D:/UE5/Diplo_VFX55/Content/
 FBXAnim=D:/UE5/Diplo_VFX55/Content/
@@ -2171,5 +2173,5 @@ bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
 MinimapUnloadedOpacity=0.660000
-PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
+PerWorldEditorSettings=(("/Game/Diplo/Untitled.Untitled", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Diplo/Untitled.Untitled", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
